// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render correctly 1`] = `
<a
  class="components-truncate wp-components-truncate components-text wp-components-text components-link wp-components-link css-zvxhcg"
  data-g2-c16t="true"
  data-g2-component="Link"
  href="#"
>
  Let it go
</a>
`;

exports[`props should render isPlain 1`] = `
<a
  class="components-truncate wp-components-truncate components-text wp-components-text components-link wp-components-link css-5dahqk"
  data-g2-c16t="true"
  data-g2-component="Link"
  href="#"
>
  Let it go
</a>
`;
